#1593 Feature/db prepared statements (#1637)
* start HO6.0 beta (#1509)

Co-authored-by: wsbrenk <zissener-weg-brenk.de>

* Release/6 (#1510)

* start HO6.0 beta

* update release_notes.md

Co-authored-by: wsbrenk <zissener-weg-brenk.de>

* build.gradle update poeditor language settings (#1513) (#1514)

Co-authored-by: wsbrenk <zissener-weg-brenk.de>
(cherry picked from commit 79407ebdc045bafc0c54774a04ed90293cab350b)

* #1519 fix MatchLineupTeam.examineSubstitution (#1520)

Co-authored-by: wsbrenk <zissener-weg-brenk.de>

* #1519 (#1521)

* #1519 recalcsubskills prolonged to 4 seasons

* #1519 Player.calcSubskills fix skill up handling

Co-authored-by: wsbrenk <zissener-weg-brenk.de>

* #1525 ls.section.reuse added to English.properties (#1526)

Co-authored-by: wsbrenk <zissener-weg-brenk.de>

* Poeditor (#1528)

* update poeditor reporter stats

* poeditor stats

Co-authored-by: wsbrenk <zissener-weg-brenk.de>

* #1530 (#1531)

* #1530 fix Helper.setComboBoxFromID class cast exception

* #1530 fix Helper.setComboBoxFromID class cast exception

Co-authored-by: wsbrenk <zissener-weg-brenk.de>

* Ho6 (#1540)

* release_notes.md update translators

* release_notes.md update translators

* release_notes.md update translators

* build.gradle release note statement

* release_notes.md update translators

* release_notes.md update translators

* release_notes.md

Co-authored-by: wsbrenk <zissener-weg-brenk.de>

* #1541 (#1543)

* release_notes.md

* release_notes.md

* #1541 TrainingWeekManager.getLastUpdateDate

* #1541 fix WeeklyTrainingType.calculateSkillIncreaseOfTrainingWeek return incorrect skills on wrong defined trainings (trainer level < 4)

Co-authored-by: wsbrenk <zissener-weg-brenk.de>

* #1545 (#1546)

* #1545 fix UpdateController.get_HO_zip_download_url (fetch jre-zips)

* #1545 release_notes.md

Co-authored-by: wsbrenk <zissener-weg-brenk.de>

* release_notes.md translato